--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,123 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding-top: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00b7ff;
+}
+
+.check-circle {
+    font-size: 25px;
+}
+.check-button {
+    border: none;
+    background: none;
+}
+.dropdown-button {
+    border: none;
+    background: none;
+    font-size: 25px;
+    margin-top: -5px;
+}
+.title {
+    font-size: 20px;
+    margin-top: 2px;
+}
+.due_date {
+    margin-top: 5px;
+    font-size: 10px;
+}
+tbody {
+    background-color: rgb(20, 91, 91);
+}
+.completed {
+    color: green;
+}
+.center {
+    margin-top: 12px;
+}
+.center2 {
+    margin-top: 8px;
+}
+.title-time {
+    font-size: 18px;
+    font-weight: bold;
+}
+.titleCompleted {
+    text-decoration: line-through;
+}
+.navbar {
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    background-color: #ffffff;
+    color: #000000;
+    padding: 10px 20px;
+    border: #000000 solid thin;
+}
+.menu {
+    position: fixed;
+    right: 10%;
+}
+.menu button {
+    width: 80px;
+}
+.logo {
+    position: fixed;
+    left: 10%;
+    font-size: 25px;
+    font-weight: bold;
+    font-style: italic;
+    color: #00d5ff;
+}
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    right: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+.overlay a:hover,
+.overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+    .overlay a {
+        font-size: 20px;
+    }
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
 }
