--- a/views/tasks/viewListTask.ejs
+++ b/views/tasks/viewListTask.ejs
@@ -1,89 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/javascripts/script.js"></script>
     <script src="https://kit.fontawesome.com/affd473cba.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
 <body>
-    <%- include('../navbar.ejs') %>
-    <div class="container" style="width: 75%;">
+    <div class="container-xxl">
         <button type="button" class="btn btn-primary mb-3 mt-3" data-bs-toggle="modal" data-bs-target="#createModal">
             Add
         </button>
         <%- include('../tasks/createTask.ejs'); %>
-        <% const tasks = [tasksPrevious, tasksToday, tasksFuture, tasksCompleted]; %>
-        <% tasks.forEach(function(taskList, index) { %>
-        <% if (taskList.length > 0) { %>
-        <% const labels = ["Previous", "Today", "Future", "Completed"]; %>
-        <% const classTitle = ["previous", "today", "future", "titleCompleted"]; %>
-        <div class="title-time">
-            <p><%= labels[index] %></p>
-        </div>
-        <table class="table table-hover table-light table-sm">
-            <tbody>
-                <% taskList.forEach(function(task) { %>
-                <tr>
-                    <td class="col-9 ps-3">
-                        <div class="title <%= classTitle[index] %>">
-                            <%= task.title %>
-                            <div class="due_date">
-                                <%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %>
-                            </div>
-                        </div>
-                    </td>
-                    <td class="col-2 text-center">
-                        <div class="center">
-                            <% if (task.priority == 1) { %>
-                            <p>Low</p>
-                            <% } else if(task.priority == 2){ %>
-                            <div>Medium</div>
-                            <% } else {%> High <% } %>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="d-flex justify-content-end align-items-center center2">
-                            <button type="button" onclick="completeTask('<%= task.id %>')" class="check-button">
-                                <span>
-                                    <% if (task.completed) { %>
-                                    <i class="fa-solid fa-circle-check check-circle completed"></i>
-                                    <% } else { %>
-                                    <i class="fa-regular fa-circle check-circle"></i>
-                                    <% } %>
-                                </span>
-                            </button>
+        <div class="row">
+            <div class="col bg-light">
+                <div class="title-time">
+                    <p>Todo</p>
+                </div>
+                <table class="table table-hover table-white table-sm">
+                    <tbody>
+                        <% tasksTodo.forEach(function(task) { %>
+                        <% console.log('dasasd',task); %>
+                        <tr class="border border-5 border-light" style="border-width: 10px;">
+                            <td class="col-9 ps-3">
+                                <div class="title">
+                                    <%= task.title %>
+                                    <div class="due_date">
+                                        <%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="col-2 ">
+                                <div class="d-flex align-items-center">
+                                    <p class="textss">dasda</p>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-flex justify-content-end">
+                                    <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',0)" class="icon-button">
+                                        <i class="fa-solid fa-caret-left fa-4x"></i>
+                                    </button>
+                                    <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',1)" class="icon-button me-2">
+                                        <i class="fa-solid fa-caret-right fa-4x"></i>
+                                    </button>
+                                    <%- include('../tasks/updateTask.ejs') %>
+                                </div>
+                            </td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col">
+                <div class="title-time">
+                    <p>Inpr</p>
+                </div>
+                <table class="table table-hover table-light table-sm">
+                    <tbody>
+                        <% tasksInprogress.forEach(function(task) { %>
+                        <tr>
+                            <td class="col-9 ps-3">
+                                <div class="title">
+                                    <%= task.title %>
+                                    <div class="due_date">
+                                        <%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="col-2 text-center">
+                                <div class="center">
+                                    <% if (task.priority_id == 1) { %>
+                                    <p>Low</p>
+                                    <% } else if(task.priority_id == 2){ %>
+                                    <div>Medium</div>
+                                    <% } else {%> High <% } %>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-flex justify-content-end align-items-center center2">
 
-                            <%- include('../tasks/updateTask.ejs') %>
-                            <div class="btn-group dropstart">
-                                <button type="button" class="dropdown-toggle dropdown-button" data-bs-toggle="dropdown" aria-expanded="false" style="z-index: 0;"></button>
-                                <div class="dropdown-menu">
-                                    <div class="btn-group px-2" role="group">
-                                        <div>
-                                            <button type="button" onclick="deleteTask('<%= task.id %>')" class="btn btn-danger">
-                                                Delete
-                                            </button>
-                                        </div>
-                                        <div class="ps-2">
-                                            <button type="button" onclick="updateTask('<%= JSON.stringify(task) %>')" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#updateModal">
-                                                Update
-                                            </button>
+                                    <%- include('../tasks/updateTask.ejs') %>
+                                    <div class="btn-group dropstart">
+                                        <button type="button" class="dropdown-toggle dropdown-button" data-bs-toggle="dropdown" aria-expanded="false" style="z-index: 0;"></button>
+                                        <div class="dropdown-menu">
+                                            <div class="btn-group px-2" role="group">
+                                                <div>
+                                                    <button type="button" onclick="deleteTask('<%= task.id %>')" class="btn btn-danger">
+                                                        Delete
+                                                    </button>
+                                                </div>
+                                                <div class="ps-2">
+                                                    <button type="button" onclick="updateTask('<%= JSON.stringify(task) %>')" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#updateModal">
+                                                        Update
+                                                    </button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <% }); %>
-            </tbody>
-        </table>
-        <% }}); %>
+                            </td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col">
+                <div class="title-time">
+                    <p>Done</p>
+                </div>
+                <table class="table table-hover table-light table-sm">
+                    <tbody>
+                        <% tasksCompleted.forEach(function(task) { %>
+                        <tr>
+                            <td class="col-9 ps-3">
+                                <div class="title">
+                                    <%= task.title %>
+                                    <div class="due_date">
+                                        <%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="col-2 text-center">
+                                <div class="center">
+                                    <% if (task.priority == 1) { %>
+                                    <p>Low</p>
+                                    <% } else if(task.priority == 2){ %>
+                                    <div>Medium</div>
+                                    <% } else {%> High <% } %>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-flex justify-content-end align-items-center center2">
+
+                                    <%- include('../tasks/updateTask.ejs') %>
+                                    <div class="btn-group dropstart">
+                                        <button type="button" class="dropdown-toggle dropdown-button" data-bs-toggle="dropdown" aria-expanded="false" style="z-index: 0;"></button>
+                                        <div class="dropdown-menu">
+                                            <div class="btn-group px-2" role="group">
+                                                <div>
+                                                    <button type="button" onclick="deleteTask('<%= task.id %>')" class="btn btn-danger">
+                                                        Delete
+                                                    </button>
+                                                </div>
+                                                <div class="ps-2">
+                                                    <button type="button" onclick="updateTask('<%= JSON.stringify(task) %>')" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#updateModal">
+                                                        Update
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
     <script>
         function deleteTask(taskId) {
@@ -101,9 +180,10 @@
             }
         }
 
-        function completeTask(taskId) {
-            fetch("/task/update/" + taskId, {
-                    method: "get",
+        function updateStatusTask(task_id,status_id,x) {
+            console.log(task_id,status_id,x);
+            fetch("/task/update/" + task_id, {
+                    method: "post",
                 })
                 .then((response) => {
                     if (!response.ok) {
