--- a/views/tasks/updateTask.ejs
+++ b/views/tasks/updateTask.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
     <div class="modal fade" id="updateModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -30,9 +32,9 @@
                             <div class="mb-3 col">
                                 <label for="priorityU" class="form-label">Priority</label>
                                 <select id="priorityU" class="form-select" aria-label="Default select example" name="priority1">
-                                    <option value="1">Low</option>
-                                    <option value="2">Medium</option>
-                                    <option value="3">High</option>
+                                    <% priorityTable.forEach(priority => { %>
+                                    <option value="<%= priority.id %>"><%= priority.name %></option>
+                                    <% }); %>
                                 </select>
                             </div>
                         </div>
@@ -57,7 +59,7 @@
             document.getElementById("titleU").value = newTask.title;
             document.getElementById("descriptionU").value =
                 newTask.description;
-            document.getElementById("priorityU").value = newTask.priority;
+            document.getElementById("priorityU").value = newTask.priority_id;
             document.getElementById("due_dateU").value = formattedDueDate;
             const formUpdate = document.getElementById("update_task");
             formUpdate.addEventListener("submit", async (event) => {
@@ -88,6 +90,20 @@
                     console.error("Lỗi:", error);
                 }
             });
+        }
+        function deleteTask(taskId) {
+            if (confirm("Bạn có chắc chắn muốn xóa task này không?")) {
+                fetch("/task/delete/" + taskId, {
+                        method: "DELETE",
+                    })
+                    .then((response) => {
+                        if (!response.ok) {
+                            throw new Error("Xóa task không thành công");
+                        }
+                        location.reload();
+                    })
+                    .catch((error) => console.error("Lỗi:", error));
+            }
         }
     </script>
 </body>
