--- a/views/tasks/viewListTask.ejs
+++ b/views/tasks/viewListTask.ejs
@@ -8,10 +8,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/affd473cba.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
 <body>
+    <div class="navbar" id="navbar">
+        <div class="menu">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search" id="searchInput">
+            </div>
+        </div>
+        <div class="logo">
+            TODOAPP
+        </div>
+    </div>
     <div class="container-xxl">
         <button type="button" class="btn btn-primary mb-3 mt-3" data-bs-toggle="modal" data-bs-target="#createModal">
             Add
@@ -26,15 +37,14 @@
                     <tbody>
                         <% tasksTodo.forEach(function(task) { %>
                         <tr class="border border-5 border-light">
-                            <%- include('../tasks/updateTask.ejs') %>
-                            <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
-                                <div class="title">
-                                    <%= task.title %>
-                                    <div class="due_date">
-                                        <%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %>
-                                    </div>
+                            <td class="col-9 ps-3" onclick="updateTask(<%= JSON.stringify(task) %>)" data-bs-toggle="modal" data-bs-target="#updateModal">
+                                <div class="d-flex align-items-start flex-column bd-highlight" style="height:auto;">
+                                    <div class="mb-auto bd-highlight title"><%= task.title %></div>
+                                    <div class="bd-highlight priority">Flex item</div>
+                                    <div class="bd-highlight due_date"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
                                 </div>
                             </td>
+                            <%- include('../tasks/updateTask.ejs') %>
                             <td>
                                 <div class="d-flex justify-content-end">
                                     <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',1)" class="icon-button me-2">
@@ -54,15 +64,14 @@
                 <table class="table table-hover table-white table-sm">
                     <tbody>
                         <% tasksInprogress.forEach(function(task) { %>
-                        <tr class="border border-5 border-light" >
-                                <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
-                                    <div class="title">
-                                        <%= task.title %>
-                                        <div class="due_date">
-                                            <%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %>
-                                        </div>
-                                    </div>
-                                </td>
+                        <tr class="border border-5 border-light">
+                            <td class="col-9 ps-3" onclick="updateTask(<%= JSON.stringify(task) %>)" data-bs-toggle="modal" data-bs-target="#updateModal">
+                                <div class="d-flex align-items-start flex-column bd-highlight">
+                                    <div class="mb-auto bd-highlight title"><%= task.title %></div>
+                                    <div class="bd-highlight priority">Flex item</div>
+                                    <div class="bd-highlight due_date"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
+                                </div>
+                            </td>
                             <td>
                                 <div class="d-flex justify-content-end">
                                     <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',-1)" class="icon-button">
@@ -71,7 +80,6 @@
                                     <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',1)" class="icon-button me-2">
                                         <i class="fa-solid fa-caret-right fa-4x"></i>
                                     </button>
-                                    <%- include('../tasks/updateTask.ejs') %>
                                 </div>
                             </td>
                         </tr>
@@ -87,12 +95,11 @@
                     <tbody>
                         <% tasksCompleted.forEach(function(task) { %>
                         <tr class="border border-5 border-light">
-                            <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
-                                <div class="title">
-                                    <%= task.title %>
-                                    <div class="due_date">
-                                        <%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %>
-                                    </div>
+                            <td class="col-9 ps-3" onclick="updateTask(<%= JSON.stringify(task) %>)" data-bs-toggle="modal" data-bs-target="#updateModal">
+                                <div class="d-flex align-items-start flex-column bd-highlight">
+                                    <div class="mb-auto bd-highlight title"><%= task.title %></div>
+                                    <div class="bd-highlight priority">Flex item</div>
+                                    <div class="bd-highlight due_date"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
                                 </div>
                             </td>
                             <td>
@@ -100,7 +107,6 @@
                                     <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',-1)" class="icon-button">
                                         <i class="fa-solid fa-caret-left fa-4x"></i>
                                     </button>
-                                    <%- include('../tasks/updateTask.ejs') %>
                                 </div>
                             </td>
                         </tr>
@@ -111,21 +117,6 @@
         </div>
     </div>
     <script>
-        function deleteTask(taskId) {
-            if (confirm("Bạn có chắc chắn muốn xóa task này không?")) {
-                fetch("/task/delete/" + taskId, {
-                        method: "DELETE",
-                    })
-                    .then((response) => {
-                        if (!response.ok) {
-                            throw new Error("Xóa task không thành công");
-                        }
-                        location.reload();
-                    })
-                    .catch((error) => console.error("Lỗi:", error));
-            }
-        }
-
         function updateStatusTask(task_id, status_id, x) {
             fetch("/task/update/status/" + task_id, {
                     method: "post",
@@ -145,6 +136,121 @@
                     location.reload();
                 })
                 .catch((error) => console.error("Lỗi:", error));
+        }
+
+        function updateTask(task) {
+            console.log(task);
+            var newTask = task;
+            var taskId = newTask.id;
+            const deleteButton = document.getElementById("deleteButton");
+            deleteButton.dataset.taskId = taskId;
+            const dueDate = new Date(newTask.due_date);
+            const formattedDueDate = dueDate
+                .toISOString()
+                .slice(0, 19)
+                .replace("T", " ");
+            document.getElementById("titleU").value = newTask.title;
+            document.getElementById("descriptionU").value =
+                newTask.description;
+            document.getElementById("priorityU").value = newTask.priority_id;
+            document.getElementById("due_dateU").value = formattedDueDate;
+            const formUpdate = document.getElementById("update_task");
+            formUpdate.addEventListener("submit", async (event) => {
+                event.preventDefault();
+                const formData = new FormData(formUpdate);
+                const title = formData.get("title");
+                const description = formData.get("description");
+                const due_date = formData.get("due_date");
+                const priority1 = formData.get("priority1");
+                try {
+                    const response = await fetch("/task/update/" + taskId, {
+                        method: "PUT",
+                        headers: {
+                            "Content-Type": "application/json",
+                        },
+                        body: JSON.stringify({
+                            title,
+                            description,
+                            due_date,
+                            priority1,
+                        }),
+                    });
+                    if (!response.ok) {
+                        throw new Error("Đã xảy ra lỗi khi tạo task");
+                    }
+                    location.reload();
+                } catch (error) {
+                    console.error("Lỗi:", error);
+                }
+            });
+        }
+
+        function deleteTask() {
+            Swal.fire({
+                title: "Do you want to delete the task?",
+                showDenyButton: true,
+                showCancelButton: true,
+                showConfirmButton: false,
+                confirmButtonText: "Save",
+                denyButtonText: `Delete`
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire("Saved!", "", "success");
+                } else if (result.isDenied) {
+                    confirmDelete();
+                }
+            });
+        }
+
+        function confirmDelete() {
+            const deleteButton = document.getElementById("deleteButton");
+            const taskId = deleteButton.dataset.taskId;
+            fetch("/task/delete/" + taskId, {
+                    method: "DELETE",
+                })
+                .then((response) => {
+                    if (!response.ok) {
+                        throw new Error("Xóa task không thành công");
+                    }
+                    location.reload();
+                })
+                .catch((error) => console.error("Lỗi:", error));
+        }
+        document.getElementById('searchInput').addEventListener('input', function() {
+            var searchTerm = this.value.trim();
+            if (searchTerm.length >= 2) { // Kiểm tra nếu từ khóa tìm kiếm có ít nhất 2 ký tự
+                searchInDatabase(searchTerm);
+            } else {
+                clearSearchResults();
+            }
+        });
+
+        function searchInDatabase(keyword) {
+            // Gửi yêu cầu AJAX để tìm kiếm dữ liệu từ máy chủ
+            fetch('/search?term=' + keyword)
+                .then(response => response.json())
+                .then(data => {
+                    // Hiển thị kết quả tìm kiếm bên dưới ô tìm kiếm
+                    displaySearchResults(data);
+                })
+                .catch(error => {
+                    console.error('Lỗi khi tìm kiếm:', error);
+                });
+        }
+
+        function displaySearchResults(results) {
+            var searchResultsList = document.getElementById('searchResultsList');
+            searchResultsList.innerHTML = ''; // Xóa tất cả các kết quả trước đó
+
+            results.forEach(function(result) {
+                var listItem = document.createElement('li');
+                listItem.textContent = result.title; // Giả sử 'title' là trường cần hiển thị từ kết quả
+                searchResultsList.appendChild(listItem);
+            });
+        }
+
+        function clearSearchResults() {
+            document.getElementById('searchResultsList').innerHTML = '';
         }
     </script>
 </body>
