--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -7,17 +7,18 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
 <body>
-    <div>
-        <form method="post" action="/user/login" id="form_login">
-            <div class="container">
-                <div class="mb-3 col-6">
+    <div class="d-flex justify-content-center">
+        <form method="post" action="/user/login" id="form_login" class="login">
+            <div class="container p-3">
+                <div class="mb-3 col-12">
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp">
                 </div>
-                <div class="mb-3 col-6">
+                <div class="mb-3 col-12">
                     <label for="password" class="form-label">Password</label>
                     <input type="password" name="password" class="form-control" id="password">
                 </div>
