--- a/views/tasks/updateTask.ejs
+++ b/views/tasks/updateTask.ejs
@@ -33,7 +33,7 @@
                 </div>
                 <div class="modal-footer d-flex bd-highlight">
                     <div class="me-auto bd-highlight"><button id="deleteButton" type="button" class="btn btn-danger" onclick="deleteTask()" style="left: 0;">Delete</button></div>
-                    <div class="bd-highlight"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button></div>
+                    <div class="bd-highlight"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="closeModal">Close</button></div>
                     <div class="bd-highlight"><button type="submit" class="btn btn-primary">Save</button></div>
                 </div>
             </form>
