--- a/views/users/createUser.ejs
+++ b/views/users/createUser.ejs
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <style>
         .is-invalid {
             border-color: #dc3545 !important;
@@ -16,45 +17,50 @@
 </head>
 
 <body>
-    <div class="container">
-        <form method="post" action="/user/create" id="create_user" onsubmit="return validatePassword()">
-            <div class="container">
-                <div class="mb-3 col-6">
+    <div class="d-flex justify-content-center">
+        <form method="post" action="/user/create" id="create_user" onsubmit="return validatePassword()" class="create_user">
+            <div class="container p-3">
+                <div class="mb-3 col-12">
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" autocomplete="off">
                 </div>
-                <div class="mb-3 col-6">
+                <div class="mb-3 col-12">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" name="name" class="form-control" id="name" autocomplete="off">
                 </div>
-                <div class="mb-3 col-6">
-                    <label for="birthdate" class="form-label">Date of Birth</label>
-                    <input type="date" name="birthdate" class="form-control" id="birthdate" autocomplete="off">
+
+                <div class="mb-3 row">
+                    <div class="mb-3 col-6">
+                        <label for="gender" class="form-label">Gender</label>
+                        <select name="gender" class="form-select" id="gender">
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                    <div class="mb-3 col-6 ps-1">
+                        <label for="birthdate" class="form-label">Date of Birth</label>
+                        <input type="date" name="birthdate" class="form-control" id="birthdate" autocomplete="off">
+                    </div>
                 </div>
-                <div class="mb-3 col-6">
-                    <label for="gender" class="form-label">Gender</label>
-                    <select name="gender" class="form-select" id="gender">
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                        <option value="other">Other</option>
-                    </select>
-                </div>
-                <div class="mb-3 col-6">
+                <div class="mb-3 col-12">
                     <label for="address" class="form-label">Address</label>
                     <input type="text" name="address" class="form-control" id="address" autocomplete="off">
                 </div>
-                <div class="mb-3 col-6">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" name="password" class="form-control" id="password" autocomplete="off">
-                    <div id="lengthAlert" style="display: none; color: #dc3545;">
-                        Mật khẩu phải có ít nhất 6 ký tự.
+                <div class="mb-3 row">
+                    <div class="mb-3 col-6">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" name="password" class="form-control" id="password" autocomplete="off">
+                        <div id="lengthAlert" style="display: none; color: #dc3545;">
+                            Mật khẩu phải có ít nhất 6 ký tự.
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3 col-6">
-                    <label for="confirmPassword" class="form-label">Confirm Password</label>
-                    <input type="password" name="confirmPassword" class="form-control" id="confirmPassword" autocomplete="off">
-                    <div id="dangerAlert" style=" color: #dc3545; display: none;">
-                        Mật khẩu và mật khẩu xác nhận không khớp.
+                    <div class="mb-3 col-6 ps-1">
+                        <label for="confirmPassword" class="form-label">Confirm Password</label>
+                        <input type="password" name="confirmPassword" class="form-control" id="confirmPassword" autocomplete="off">
+                        <div id="dangerAlert" style=" color: #dc3545; display: none;">
+                            Mật khẩu và mật khẩu xác nhận không khớp.
+                        </div>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary" disabled id="submitBtn">Submit</button>
