--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
@@ -23,6 +24,9 @@
                     <input type="password" name="password" class="form-control" id="password">
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+            <div>
+                <a href="http://localhost:3000/user/create">adsda</a>
             </div>
         </form>
     </div>
@@ -41,8 +45,22 @@
                     },
                     body: JSON.stringify({ password, email })
                 });
-                if (!response.ok) {
-                    throw new Error('Email or password incorrectly');
+                if (response.status === 401) {
+                    const Toast = Swal.mixin({
+                        toast: true,
+                        position: "top-end",
+                        showConfirmButton: false,
+                        timer: 3000,
+                        timerProgressBar: true,
+                        didOpen: (toast) => {
+                            toast.onmouseenter = Swal.stopTimer;
+                            toast.onmouseleave = Swal.resumeTimer;
+                        }
+                    });
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Invalid Email or Password!"
+                    });
                 } else {
                     window.location.href = '/task/view';
                 }
